--- a/stories/aistyle.css
+++ b/stories/aistyle.css
@@ -58,6 +58,9 @@ hr {
 }
 
 .container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 	padding: 0;
 	margin: 0 auto;
 	width: 100%;
@@ -106,12 +109,17 @@ article {
 	background-color: #e2e2e2;
 	padding: 1.6rem;
 	width: 60%;
-	margin: 0 0 1.6rem;
+	margin: auto auto 1.6rem;
 	border-radius: 10px;
 }
 
 .main-article_cover {
 	margin: 0 0 1.6rem;
+}
+
+.main-article_cover img {
+  width: 600px;
+  height: auto;
 }
 
 .main-article_cover .caption {
@@ -129,48 +137,6 @@ article {
 	margin: 0 0 1.6rem;
 }
 
-.main-sidebar {
-	width: 40%;
-	padding: 1.6rem;
-	background-color: #323232;
-	color: #f2f2f2;
-	margin: 0 0 1.6rem;
-	font-size: 0.9rem;
-	border-radius: 10px;
-}
-
-.main-sidebar_thumb {
-	margin: 0 0 0.8rem;
-}
-
-.main-sidebar_thumb .caption {
-	color: #f2f2f2;
-	font-size: 0.8rem;
-	font-style: italic;
-	line-height: 1;
-}
-
-.main-sidebar li {
-	margin: 0 0 1.6rem;
-}
-
-.main-sidebar_byline {
-	margin: 0 0 1.6rem;
-	display: flex;
-	flex-direction: row;
-	flex-wrap: nowrap;
-	justify-content: space-between;
-	align-items: center;
-}
-
-.main-sidebar_byline .byline_date {
-	display: none;
-}
-
-.main-sidebar_byline .byline_name {
-	display: block;
-}
-
 footer {
 	text-align: center;
 }
@@ -184,13 +150,7 @@ footer {
 	}
 
 	article {
-		width: 60%;
-		border-radius: 0.6rem;
-		margin: 0;
-	}
-
-	.main-sidebar {
-		width: 40%;
+		width: 100%;
 		border-radius: 0.6rem;
 		margin: 0;
 	}
