--- a/css/style.css
+++ b/css/style.css
@@ -96,8 +96,8 @@ header {
 .header_pub-info {
 	margin: 0 0 1.6rem;
 	display: flex;
-	flex-direction: column;
-	justify-content: center;
+	flex-direction: row;
+	justify-content: space-between;
 	align-items: center;
 	text-transform: uppercase;
 }
